<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DotIr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="device_select_text"> کنترل مورد نظر را انتخاب کنید:</string>
    <string name="new_device">" کنترل جدید"</string>
    <string name="help">راهنما</string>
    <string name="insert_mac">لطفا کد ۱۲ رقمی درج شده در پشت جعبه را وارد کنید: </string>
    <string name="connect">اتصال</string>
     <string name="manBlue">اتصال دستی</string>
    <string name="rem_select">نام کنترل جدید را وارد کنید</string>
    <string name="b_name">نام  جدید را وارد کنید</string>
    <string name="temp1">مدل کنترل 1</string>
    <string name="temp2">مدل کنترل 2</string>
    <string name="temp3">مدل کنترل 3</string>
    <string name="temp4">مدل کنترل 4</string>
    <string name="back_str">"برای خروج دوبار کلیک کنید"</string>
    <string name="okText">تایید</string>
    <string name="cancelText">انصراف</string>
    <string name="dev_select">انتخاب کنترل</string>
    <string name="button_recode">دریافت کد</string>
    <string name="button_delete">حذف کنترل</string>
    <string name="select_device">مدل را انتخاب کنید</string>
    <string name="b_rename">تغییر نام کلید</string>
    <string name="remote_n">" کنترل "</string>
    <string name="waiting_txt">"منتظر دریافت کد..."</string>
    <string name="devwait_txt">" دستگاه را متصل کنید..."</string>
    <string name="rec_txt">"دریافت شد :)"</string>
    <string name="nrec_txt">"دریافت نشد ):"</string>
    <string name="appname_txt">"  کنترل هوشمند"</string>

</resources>