<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/TransparentGrey"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/appname_txt"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" >
    </TextView>

    <Button
        android:id="@+id/help_init"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/TransparentGrey"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/help"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/connect_init"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:shadowColor="@color/TransparentGrey"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/connect"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/txt_waitdev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:shadowColor="@color/TransparentGrey"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/devwait_txt"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <Button
        android:id="@+id/manBlue_init"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:shadowColor="@color/TransparentGrey"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:visibility="invisible"
        android:text="@string/manBlue"
        android:textColor="@color/White" />

</LinearLayout>